@@ -3,6 +3,7 @@ amaroK Changelog
 (c) 2002, 2003 by Mark Kretschmann and the amaroK team. GPL License.
 
 
+  * fix: save stream names as #EXTINF in m3u files
   * add: bug report dialog
   * add: proxy for decoding shoutcast/icecast metadata (experimental!)
   * add: amaroK now in bugs.kde.org
